--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<html style="font-size: 16px;">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
@@ -7,7 +8,6 @@
 </head>
 
 <body>
-    <div id="app">
-        <h1>{{ title }}</h1>
-    </div>
+    <div id="app"></div>
 </body>
+</html>
